--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=/home/wq/.netbeans/8.2/config/GlassFishEE6/Properties/gfv31523250813.properties
+deploy.ant.properties.file=C:\\Users\\wq\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv31644778121.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=/home/wq/glassfish-4.1.1/glassfish/domains/domain1
-j2ee.server.home=/home/wq/glassfish-4.1.1/glassfish
-j2ee.server.instance=[/home/wq/glassfish-4.1.1/glassfish:/home/wq/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=/home/wq/glassfish-4.1.1
-selected.browser=SL[/Browsers/opera
-user.properties.file=/home/wq/.netbeans/8.2/build.properties
+j2ee.server.domain=C:/Users/wq/glassfish4/glassfish/domains/domain1
+j2ee.server.home=C:/Users/wq/glassfish4/glassfish
+j2ee.server.instance=[C:\\Users\\wq\\glassfish4\\glassfish;C:\\Users\\wq\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Users/wq/glassfish4
+selected.browser=SL[/Browsers/None
+user.properties.file=C:\\Users\\wq\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
